# render

./: .dockerignore  .flake8  .gitignore  Makefile  README.md  pyproject.toml  render.code-workspace  render.yaml
.devcontainer/: devcontainer.json
app/base/component/: gitinfo.py  logger.py  mlflow_provider.py  params.py
app/base/models/: model.py  pipeline.py  trainer.py
app/codebox/: LICENSE  localbox.py
app/codeinterpreter/: LICENSE
app/codeinterpreter/component/: interprete_async.py  interpreter.py  session.py
app/codeinterpreter/component/llm/: agent_executer_factory.py  agents.py  chains.py  llm_builder.py  prompts.py  schema.py
app/codeinterpreter/executable/: demo_stream.py
app/langchain/component/: agent_bot.py
app/langchain/component/agent/: agent_builder.py  agent_executor.py  initialize.py  prompt.py
app/langchain/component/callbacks/: simple.py
app/langchain/component/chain/: stream.py
app/langchain/component/llms/: redpajama.py
app/langchain/component/tools/: custom_python.py  custom_shell.py
app/langchain/executable/: bash_bot.py  demo.py  demo_stream.py  doc_bot.py  python_bot.py  run_conversation.py
docker/: Dockerfile.cpu  Dockerfile.lowcode_llm  compose.cpu.yml
rc/: .bashrc
