[tool.poetry]
name = "experiment-backend"
version = "0.1.0"
description = "backend experiment project"
authors = ["tkosht"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]


[tool.poetry.dependencies]
python = ">=3.10, <3.12"        # <3.12 for sktime

# for data science
numpy = "*"
pandas = "*"
scikit-learn = "*"
scipy = "*"
sympy = "*"
tqdm = "*"
matplotlib = "*"
seaborn = "*"
plotly = "*"
pandasgui = "*"
scikit-optimize = "*"
optuna = "*"

# for experiment management
mlflow = "*"
tensorboard = "*"
tensorboardX = "*"
# python-dateutil==2.8.0
hydra-core = "*"

# other tools
omegaconf = "*"
notebook = "*"
python-dotenv = "*"
ulid-py = "*"
typer = "*"

# # for project
fastapi = "*"
uvicorn = "*"
# aiofiles = "*"
# python-multipart = "*"

# torch = "*"
# torch==1.13.1
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp310-cp310-linux_x86_64.whl"}
# torchvision = "*"
# torchmetrics = "*"
# nltk = "*"
# torchtext = "*"
# pytorch-forecasting = "*"
tensorflow-datasets = "*"

# fastparquet = "*"
# python-snappy = "*"
# pyro-ppl = "*"
# pystan = "2.19.1.1"
# pystan = "*"
prophet = "*"
# neo4j = "*"
# neomodel = "*"

# # for NLP
# unidic-lite = "*"
# sudachidict_core = "*"
# sudachidict_small = "*"
# sudachidict_full = "*"
# spacy = "*"
# spacy = {extras = ["cuda110"], version = "*"}
# spacy-transformers = "1.1.3"
# ja_ginza_electra = "*"
# fugashi = "*"
# ipadic = "*"
# networkx = "*"
# gensim = "*"
# janome = "*"
# wordcloud = "*"
sentencepiece = "*"
einops = "*"

# transformers = "*"
# git+https://github.com/huggingface/transformers
transformers = {git = "https://github.com/huggingface/transformers"}
datasets = "*"

# LLM relatives
# # for langchain
langchain = "^0.0.262"
openai = "*"
google-search-results = "*"
google-api-python-client = "*"
# chromadb = "*"
# tiktoken = "*"
# pycryptodome = "*"
# pypdf = "*"
# pandas_datareader = "*"


wikipedia = "*"
# Flask-Cors = "*"
# accelerate = "*"
# bitsandbytes = "*"

# guidance
guidance = "*"

# Semantic Kernel
semantic-kernel = "*"

# for LLM
huggingface_hub = "*"
codeboxapi = "*"
llama-cpp-python = "*"

# webapp
gradio = "^3.21.0"
streamlit = "^1.24.0"
streamlit-chat = "*"
streamlit-extras = "*"
hugchat = "*"

# datascience
lightgbm = "*"
dtw-python = "^1.3.0"
llvmlite = "^0.40.1"
numba = "^0.57.1"
tslearn = "^0.6.1"
sktime = "^0.21.0"
protobuf = "3.20.1"
jupyter-kernel-gateway = "^2.5.2"
statsmodels = "^0.14.0"
yfinance = "^0.2.28"


[tool.poetry.dev-dependencies]
# for sqa
pudb = "*"
pylint = "*"
flake8 = "*"
black = "*"
coverage = "*"
pytest = "*"
pytest-flake8 = "*"
pytest-cov = "*"
pytest-xdist = "*"
pytest-html = "*"
# docutils==0.15
Sphinx = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

